# class-exercises-fall2024

lab02/: ContainsPair.java
lab03/: answers.md
lab04/: answers.md
lab05/: answers.md  index.html
lab05/node-demo/: package-lock.json  package.json
lab05/node-demo/src/: App.jsx
lab05/poetry-demo/: lab05-experiments.py  pyproject.toml
lab06/python_rps/: .flake8  helpers.py  run_tests_framework.py  run_tests_vanilla.py  your_task.py
lab07/: index.html  package.json
lab07/src/: App.jsx  ButtonCount.jsx  Profile.jsx
lab08/: App.jsx  index.html  package-lock.json  package.json
lab09/: README.md  answers.md
project02/backend/: db.py  models.py  sample_orm_queries.py  server.py
project02/ui/src/js/components/: CourseSearchForm.jsx
project02/ui/src/js/services/: api.jsx
topic05/tests/: test_main.py
