[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Travis Groom <tgroom@unca.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
